terraform/modules/k8s_platform/apps/team-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-b-ingress
  namespace: team-b-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: team-b.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: generic-app # match the Helm deployed service
            port:
              number: 80
